--- a/bootstrap/bootstrap-prestructure.html
+++ b/bootstrap/bootstrap-prestructure.html
@@ -1,70 +1,60 @@
-<html><head>
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-2">
-    <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
-.en-markup-crop-options {
-    top: 18px !important;
-    left: 50% !important;
-    margin-left: -100px !important;
-    width: 200px !important;
-    border: 2px rgba(255,255,255,.38) solid !important;
-    border-radius: 4px !important;
-}
-
-.en-markup-crop-options div div:first-of-type {
-    margin-left: 0px !important;
-}
-    </style>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-  </head>
-  <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Hello Puppies</title>
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
+</head>
+<body>
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <img src="./bootstrap-prestructure_files/100x100">
+        <img class="title-logo img-responsive" src="./img/waggy-dog.gif">
       </div>
-      <div class="col-md-6">
-        <h1>Jane Doette</h1>
-        <h3>Front-end Ninja</h3>
+      <div class="col-md-6 text-right text-uppercase">
+        <h1 class="title-super text-thin">Dr. Doge</h1>
+        <h3>Puppy Ninja</h3>
       </div>
     </div>
-  <div class="row">
-    <div class="col-md-12">
-      <img src="./bootstrap-prestructure_files/1140x350">
-    </div>
-  </div>
     <div class="row">
       <div class="col-md-12">
-        <h2>Featured Work</h2>
+        <div><hr></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
-        <img src="./bootstrap-prestructure_files/555x300">
-        <h3>Appify</h3>
-        <p><a href="http://github.com/">Link to project</a></p>
-      </div>
-      <div class="col-md-6">
-        <img src="./bootstrap-prestructure_files/555x300">
-        <h3>Appify</h3>
-        <p><a href="http://github.com/">Link to project</a></p>
+      <div class="col-md-12">
+        <img class="img-responsive" src="./img/big.jpg">
       </div>
     </div>
     <div class="row">
+      <div class="col-md-12">
+        <h2 class="text-muted">Featured Work</h2>
+      </div>
+    </div>
+    <div class="row text-center">
       <div class="col-md-6">
-        <img src="./bootstrap-prestructure_files/555x300">
-        <h3>Appify</h3>
-        <p><a href="http://github.com/">Link to project</a></p>
+        <img class="img-responsive" src="./img/MiloSocialDogImage.png">
+        <h3>Serious</h3>
       </div>
       <div class="col-md-6">
-        <img src="./bootstrap-prestructure_files/555x300">
-        <h3>Appify</h3>
-        <p><a href="http://github.com/">Link to project</a></p>
+        <img class="img-responsive" src="./img/pug.jpg">
+        <h3>Happy</h3>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-6">
+        <img class="img-responsive" src="./img/dog.jpg">
+        <h3>Rest</h3>
+      </div>
+      <div class="col-md-6">
+        <img class="img-responsive" src="./img/shaman.jpg">
+        <h3>Despise</h3>
       </div>
     </div>
   </div>
-
-
-
-
-  </body>
+</body>
 </html>
